Iniciando projeto calculador-js

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ReinaldoDomingos/calculadora-js#readme",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browserify": "^16.5.1",
     "jasmine": "^3.5.0",
     "karma": "^5.0.9",
